--- a/index.html
+++ b/index.html
@@ -4,69 +4,130 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dedek Rahmat - Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <ul class="nav-links">
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#summary">About</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <div class="container nav-inner">
+        <a class="brand" href="#hero" aria-label="Home">
+          <span class="brand-mark">DR</span>
+          <span class="brand-text">Dedek Rahmat</span>
+        </a>
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-navigation">
+          <span></span><span></span><span></span>
+        </button>
+        <ul id="primary-navigation" class="nav-links">
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#summary">About</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
   <main>
     <section id="hero" class="hero-section">
-      <h1>Dedek Rahmat</h1>
+      <div class="container hero-inner">
+        <div class="hero-content">
+          <h1>Dedek Rahmat</h1>
+          <p class="subtitle">Electrical Engineer • PLC Programmer • Automation Specialist</p>
+          <div class="cta">
+            <a class="btn btn-primary" href="#contact">Contact Me</a>
+            <a class="btn btn-secondary" href="#contact" title="Minta file CV">Download CV</a>
+          </div>
+          <div class="socials">
+            <a href="mailto:dedekrossi46@gmail.com" aria-label="Email">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Zm0 2v.01L12 13l8-6.99V6H4Zm16 12V8.24l-7.39 5.16a2 2 0 0 1-2.22 0L3 8.24V18a0 0 0 0 0 0 0h17Z" fill="currentColor"/></svg>
+            </a>
+            <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 1 1 0 5.001 2.5 2.5 0 0 1 0-5Zm.02 6.5H2v11h3V10Zm4 0H6v11h3v-5.6c0-3.1 4-3.3 4 0V21h3v-6.9c0-5.8-6.3-5.6-7-2.7V10Z" fill="currentColor"/></svg>
+            </a>
+            <a href="tel:+62895603577769" aria-label="Phone">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.11.37 2.3.57 3.58.57a1 1 0 0 1 1 1V21a1 1 0 0 1-1 1C10.07 22 2 13.93 2 3a1 1 0 0 1 1-1h4.5a1 1 0 0 1 1 1c0 1.28.2 2.47.57 3.58a1 1 0 0 1-.25 1.01l-2.2 2.2Z" fill="currentColor"/></svg>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="summary" class="summary-section">
-      <h2>Professional Summary</h2>
-      <p>Electrical Engineer, PLC Programmer, Automation Specialist</p>
+      <div class="container">
+        <h2>Professional Summary</h2>
+        <p>Electrical Engineer, PLC Programmer, Automation Specialist</p>
+      </div>
     </section>
 
     <section id="education" class="education-section">
-      <h2>Education</h2>
-      <p>Padang State University, GPA 3.56</p>
+      <div class="container">
+        <h2>Education</h2>
+        <div class="card">
+          <p><strong>Padang State University</strong></p>
+          <p>GPA 3.56</p>
+        </div>
+      </div>
     </section>
 
     <section id="experience" class="experience-section">
-      <h2>Work Experience</h2>
-      <ul>
-        <li>Asus Service Indonesia</li>
-        <li>Cladtek BI Metal</li>
-        <li>Tenaris Hydril</li>
-        <li>Teaching Assistant</li>
-      </ul>
+      <div class="container">
+        <h2>Work Experience</h2>
+        <ul class="timeline">
+          <li>
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">Asus Service Indonesia</div>
+          </li>
+          <li>
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">Cladtek BI Metal</div>
+          </li>
+          <li>
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">Tenaris Hydril</div>
+          </li>
+          <li>
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">Teaching Assistant</div>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section id="skills" class="skills-section">
-      <h2>Skills</h2>
-      <ul>
-        <li>PLC Programming</li>
-        <li>Electrical Engineering</li>
-        <li>HMI Design</li>
-        <li>AutoCAD</li>
-        <li>Data Analysis</li>
-      </ul>
+      <div class="container">
+        <h2>Skills</h2>
+        <ul class="skills-grid">
+          <li>PLC Programming</li>
+          <li>Electrical Engineering</li>
+          <li>HMI Design</li>
+          <li>AutoCAD</li>
+          <li>Data Analysis</li>
+        </ul>
+      </div>
     </section>
 
     <section id="contact" class="contact-section">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:dedekrossi46@gmail.com">dedekrossi46@gmail.com</a></p>
-      <p>Phone: <a href="tel:+62895603577769">+62895603577769</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer">www.linkedin.com/in/dedek-rahmat-7b2a262a4</a></p>
+      <div class="container">
+        <h2>Contact</h2>
+        <div class="contact-list">
+          <p>Email: <a href="mailto:dedekrossi46@gmail.com">dedekrossi46@gmail.com</a></p>
+          <p>Phone: <a href="tel:+62895603577769">+62895603577769</a></p>
+          <p>LinkedIn: <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer">www.linkedin.com/in/dedek-rahmat-7b2a262a4</a></p>
+        </div>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Dedek Rahmat. All rights reserved.</p>
+    <p>&copy; <span id="year">2024</span> Dedek Rahmat. All rights reserved.</p>
   </footer>
+
+  <button id="backToTop" aria-label="Back to top">↑</button>
 
   <script src="script.js"></script>
 </body>
