--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p class="subtitle">Electrical Engineer • PLC Programmer • Automation Specialist</p>
           <div class="cta">
             <a class="btn btn-primary" href="#contact">Contact Me</a>
-            <a class="btn btn-secondary" href="CV_Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
+            <a id="downloadCV" class="btn btn-secondary" href="CV_Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
           </div>
           <div class="socials">
             <a href="mailto:dedekrossi46@gmail.com" aria-label="Email">
