Sync content with CV: summary, personal details, full experience, skills, languages; fix CSS; cache-bust

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=20251002" />
+  <link rel="stylesheet" href="style.css?v=20251002a" />
 </head>
 <body>
   <header>
@@ -60,7 +60,14 @@
     <section id="summary" class="summary-section">
       <div class="container">
         <h2>Professional Summary</h2>
-        <p>Electrical Engineer, PLC Programmer, Automation Specialist</p>
+        <p>
+          With over 3 years of experience in PLC programming, installation, and troubleshooting, I specialize in optimizing
+          production systems to achieve high efficiency and effectiveness. Skilled in analyzing and interpreting ladder diagrams,
+          I excel at diagnosing issues and delivering targeted solutions to enhance machine performance and productivity.
+          Known for my proactive approach, I consistently exceed expectations by ensuring projects are completed within budget
+          and with optimal results. My deep technical expertise, strong work ethic, and ability to build lasting client
+          relationships make me a valuable asset in supporting team and company success.
+        </p>
       </div>
     </section>
 
@@ -68,8 +75,16 @@
       <div class="container">
         <h2>Education</h2>
         <div class="card">
-          <p><strong>Padang State University</strong></p>
-          <p>GPA 3.56</p>
+          <p><strong>Bachelors of Electrical Engineering (S1), Padang State University</strong></p>
+          <p>GPA: 3.56</p>
+        </div>
+        <div class="card details-grid" style="margin-top:1rem">
+          <div><strong>Personal Details</strong></div>
+          <div>
+            <p>Place, Date of Birth: Padang, July 17, 2001</p>
+            <p>Gender / Marital Status: Male / Single</p>
+            <p>Religion / Nationality: Islam / Indonesian</p>
+          </div>
         </div>
       </div>
     </section>
@@ -80,19 +95,58 @@
         <ul class="timeline">
           <li>
             <div class="timeline-dot"></div>
-            <div class="timeline-content">Asus Service Indonesia</div>
+            <div class="timeline-content">
+              <div class="job-header">
+                <strong>PLC Technician</strong> · Cladtek BI Metal Manufacturing — Batam
+              </div>
+              <div class="job-meta">July 2024 – December 2024</div>
+              <ul class="job-points">
+                <li>Conduct installation, programming, and maintenance of PLC systems to optimize production operations.</li>
+                <li>Diagnose and repair automated control systems to ensure machine performance and efficiency.</li>
+                <li>Develop and modify PLC programs according to production needs and security protocols.</li>
+                <li>Design HMIs using Weintek, C#, and Python to enhance user interaction and automation efficiency.</li>
+                <li>Create technical proposals and Bills of Materials (BOM) for project planning.</li>
+                <li>Assist in budgeting, forecasting, and analysis to support project decision-making.</li>
+                <li>Collaborate with engineering teams to analyze and enhance production effectiveness and safety.</li>
+                <li>Perform calibration and testing of automation systems to meet operational standards.</li>
+                <li>Document and report program changes and equipment configurations for compliance and reference.</li>
+              </ul>
+            </div>
           </li>
           <li>
             <div class="timeline-dot"></div>
-            <div class="timeline-content">Cladtek BI Metal</div>
+            <div class="timeline-content">
+              <div class="job-header">
+                <strong>Electrical Maintenance</strong> · Tenaris Hydril Indonesia — Batam
+              </div>
+              <div class="job-meta">April 2024 – June 2024</div>
+              <ul class="job-points">
+                <li>Assist management in continuous improvement at the maintenance plant.</li>
+                <li>Install and repair hydraulic components.</li>
+                <li>Perform replacements on diagnosed faulty electrical elements of machine.</li>
+                <li>Control and manage electrical spare parts on a daily basis to support production.</li>
+                <li>Modified PLC programs to meet project requirements and optimize performance.</li>
+                <li>Installed wiring with precision and adherence to safety standards.</li>
+                <li>Trained maintenance staff on PLC systems.</li>
+                <li>Maintained strong client relationships to ensure satisfaction and long-term partnerships.</li>
+                <li>Developing clear Work Instructions for streamlined processes and improved productivity.</li>
+              </ul>
+            </div>
           </li>
           <li>
             <div class="timeline-dot"></div>
-            <div class="timeline-content">Tenaris Hydril</div>
-          </li>
-          <li>
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">Teaching Assistant</div>
+            <div class="timeline-content">
+              <div class="job-header">
+                <strong>Teaching Assistant</strong> · Padang State University — Padang
+              </div>
+              <div class="job-meta">July 2022 – March 2024</div>
+              <ul class="job-points">
+                <li>Creating Mechatronics Practicum Jobsheet.</li>
+                <li>Taught PLC concepts to students and ensured accuracy in electrical and PLC circuits.</li>
+                <li>Repaired faulty PLC and authored research journals.</li>
+                <li>Taught integrated PLC-IoT systems to students; assisted professors in evaluating final projects.</li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
@@ -101,13 +155,35 @@
     <section id="skills" class="skills-section">
       <div class="container">
         <h2>Skills</h2>
-        <ul class="skills-grid">
-          <li>PLC Programming</li>
-          <li>Electrical Engineering</li>
-          <li>HMI Design</li>
-          <li>AutoCAD</li>
-          <li>Data Analysis</li>
-        </ul>
+        <div class="card" style="margin-bottom:1rem">
+          <ul class="job-points">
+            <li><strong>Electrical Engineering:</strong> Proficient in industrial electrical systems and component maintenance.</li>
+            <li><strong>PLC Programming:</strong> Programming and troubleshooting across PLC platforms (Siemens, Yaskawa, Mitsubishi, Omron).</li>
+            <li><strong>Pneumatic Systems:</strong> Knowledgeable in pneumatic systems maintenance for industrial applications.</li>
+            <li><strong>HMI Design:</strong> Designing user interfaces using Weintek, C#, and Python.</li>
+            <li><strong>AutoCAD & Electrical CAD:</strong> Skilled in design and modeling for technical projects.</li>
+            <li><strong>Microsoft Office Suite:</strong> Professional use of Word, Excel, PowerPoint for reporting and documentation.</li>
+            <li><strong>Data Analysis:</strong> Capable of processing and analyzing data to support decision-making.</li>
+          </ul>
+        </div>
+        <div class="details-grid">
+          <div class="card">
+            <strong>Languages</strong>
+            <ul class="job-points">
+              <li>English</li>
+              <li>Indonesian</li>
+            </ul>
+          </div>
+          <div class="card">
+            <strong>Abilities</strong>
+            <ul class="job-points">
+              <li>Quick Adaptation to New Technologies</li>
+              <li>Critical Thinking and Problem-Solving Under Pressure</li>
+              <li>Strong Client and Team Interaction Skills</li>
+              <li>Effective Communication Abilities</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -115,6 +191,7 @@
       <div class="container">
         <h2>Contact</h2>
         <div class="contact-list">
+          <p>Address: Taman Cipta Asri THP. 2 Blok. Nira No. 27</p>
           <p>Email: <a href="mailto:dedekrossi46@gmail.com">dedekrossi46@gmail.com</a></p>
           <p>Phone: <a href="tel:+62895603577769">+62895603577769</a></p>
           <p>LinkedIn: <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer">www.linkedin.com/in/dedek-rahmat-7b2a262a4</a></p>
@@ -129,6 +206,6 @@
 
   <button id="backToTop" aria-label="Back to top">↑</button>
 
-  <script src="script.js?v=20251002"></script>
+  <script src="script.js?v=20251002a"></script>
 </body>
 </html>
