Point Download CV to new file; add filename to auto-detect; bump asset versions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=20251002a" />
+  <link rel="stylesheet" href="style.css?v=20251002b" />
 </head>
 <body>
   <header>
@@ -40,7 +40,7 @@
           <p class="subtitle">Electrical Engineer • PLC Programmer • Automation Specialist</p>
           <div class="cta">
             <a class="btn btn-primary" href="#contact">Contact Me</a>
-            <a id="downloadCV" class="btn btn-secondary" href="CV_Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
+            <a id="downloadCV" class="btn btn-secondary" href="Curriculum Vitae Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
           </div>
           <div class="socials">
             <a href="mailto:dedekrossi46@gmail.com" aria-label="Email">
@@ -206,6 +206,6 @@
 
   <button id="backToTop" aria-label="Back to top">↑</button>
 
-  <script src="script.js?v=20251002a"></script>
+  <script src="script.js?v=20251002b"></script>
 </body>
 </html>
