Add animations, profile image, projects section with SVGs, reveal on scroll, and styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=20251002b" />
+  <link rel="stylesheet" href="style.css?v=20251002c" />
 </head>
 <body>
   <header>
@@ -34,24 +34,31 @@
 
   <main>
     <section id="hero" class="hero-section">
+      <div class="orb orb-a" aria-hidden="true"></div>
+      <div class="orb orb-b" aria-hidden="true"></div>
       <div class="container hero-inner">
-        <div class="hero-content">
-          <h1>Dedek Rahmat</h1>
-          <p class="subtitle">Electrical Engineer • PLC Programmer • Automation Specialist</p>
-          <div class="cta">
-            <a class="btn btn-primary" href="#contact">Contact Me</a>
-            <a id="downloadCV" class="btn btn-secondary" href="Curriculum Vitae Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
+        <div class="hero-grid">
+          <div class="hero-content" data-reveal>
+            <h1>Dedek Rahmat</h1>
+            <p class="subtitle">Electrical Engineer • PLC Programmer • Automation Specialist</p>
+            <div class="cta">
+              <a class="btn btn-primary" href="#contact">Contact Me</a>
+              <a id="downloadCV" class="btn btn-secondary" href="Curriculum Vitae Dedek Rahmat.pdf" download title="Download CV PDF">Download CV</a>
+            </div>
+            <div class="socials">
+              <a href="mailto:dedekrossi46@gmail.com" aria-label="Email">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Zm0 2v.01L12 13l8-6.99V6H4Zm16 12V8.24l-7.39 5.16a2 2 0 0 1-2.22 0L3 8.24V18a0 0 0 0 0 0 0h17Z" fill="currentColor"/></svg>
+              </a>
+              <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 1 1 0 5.001 2.5 2.5 0 0 1 0-5Zm.02 6.5H2v11h3V10Zm4 0H6v11h3v-5.6c0-3.1 4-3.3 4 0V21h3v-6.9c0-5.8-6.3-5.6-7-2.7V10Z" fill="currentColor"/></svg>
+              </a>
+              <a href="tel:+62895603577769" aria-label="Phone">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.11.37 2.3.57 3.58.57a1 1 0 0 1 1 1V21a1 1 0 0 1-1 1C10.07 22 2 13.93 2 3a1 1 0 0 1 1-1h4.5a1 1 0 0 1 1 1c0 1.28.2 2.47.57 3.58a1 1 0 0 1-.25 1.01l-2.2 2.2Z" fill="currentColor"/></svg>
+              </a>
+            </div>
           </div>
-          <div class="socials">
-            <a href="mailto:dedekrossi46@gmail.com" aria-label="Email">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Zm0 2v.01L12 13l8-6.99V6H4Zm16 12V8.24l-7.39 5.16a2 2 0 0 1-2.22 0L3 8.24V18a0 0 0 0 0 0 0h17Z" fill="currentColor"/></svg>
-            </a>
-            <a href="https://www.linkedin.com/in/dedek-rahmat-7b2a262a4" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 1 1 0 5.001 2.5 2.5 0 0 1 0-5Zm.02 6.5H2v11h3V10Zm4 0H6v11h3v-5.6c0-3.1 4-3.3 4 0V21h3v-6.9c0-5.8-6.3-5.6-7-2.7V10Z" fill="currentColor"/></svg>
-            </a>
-            <a href="tel:+62895603577769" aria-label="Phone">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.11.37 2.3.57 3.58.57a1 1 0 0 1 1 1V21a1 1 0 0 1-1 1C10.07 22 2 13.93 2 3a1 1 0 0 1 1-1h4.5a1 1 0 0 1 1 1c0 1.28.2 2.47.57 3.58a1 1 0 0 1-.25 1.01l-2.2 2.2Z" fill="currentColor"/></svg>
-            </a>
+          <div class="hero-avatar" data-reveal>
+            <img id="profileImg" src="assets/profile-placeholder.svg" alt="Photo of Dedek Rahmat" width="320" height="320" loading="eager" />
           </div>
         </div>
       </div>
@@ -184,6 +191,35 @@
             </ul>
           </div>
         </div>
+        <section id="projects" class="projects-section" style="margin-top:2rem">
+          <h2>Projects</h2>
+          <div class="projects-grid">
+            <article class="project-card" data-reveal>
+              <img src="assets/project-1.svg" alt="Automation project 1" width="480" height="270" loading="lazy" />
+              <div class="project-body">
+                <h3>PLC Optimization for Production Line</h3>
+                <p>Refactoring ladder logic to reduce cycle time and improve reliability on a bottleneck machine.</p>
+                <ul class="tags"><li>Siemens</li><li>Ladder</li><li>Optimization</li></ul>
+              </div>
+            </article>
+            <article class="project-card" data-reveal>
+              <img src="assets/project-2.svg" alt="HMI project 2" width="480" height="270" loading="lazy" />
+              <div class="project-body">
+                <h3>HMI Redesign with Weintek</h3>
+                <p>Designed intuitive screens improving operator usability and reducing training time.</p>
+                <ul class="tags"><li>Weintek</li><li>UX</li><li>HMI</li></ul>
+              </div>
+            </article>
+            <article class="project-card" data-reveal>
+              <img src="assets/project-3.svg" alt="PLC-IoT integration" width="480" height="270" loading="lazy" />
+              <div class="project-body">
+                <h3>PLC–IoT Monitoring</h3>
+                <p>Simple telemetry pipeline for real-time status and alarms visualization.</p>
+                <ul class="tags"><li>PLC</li><li>Python</li><li>IoT</li></ul>
+              </div>
+            </article>
+          </div>
+        </section>
       </div>
     </section>
 
@@ -206,6 +242,6 @@
 
   <button id="backToTop" aria-label="Back to top">↑</button>
 
-  <script src="script.js?v=20251002b"></script>
+  <script src="script.js?v=20251002c"></script>
 </body>
 </html>
