Add visitors counter via CountAPI with local fallback; style badge; fix CSS typo; cache-bust

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css?v=20251002c" />
+  <link rel="stylesheet" href="style.css?v=20251002d" />
 </head>
 <body>
   <header>
@@ -238,10 +238,11 @@
 
   <footer>
     <p>&copy; <span id="year">2024</span> Dedek Rahmat. All rights reserved.</p>
+    <p><span class="counter-badge" title="Visitors count based on refresh">👀 <span id="visitCount">—</span> visits</span></p>
   </footer>
 
   <button id="backToTop" aria-label="Back to top">↑</button>
 
-  <script src="script.js?v=20251002c"></script>
+  <script src="script.js?v=20251002d"></script>
 </body>
 </html>
